--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -4,10 +4,10 @@
     <string name="add">যোগ</string>
     <string name="no_records">কোন রেকর্ডস</string>
     <string name="search_hint">অনুসন্ধান</string>
-    <!--NFC Messages-->
+    <!--NFC Messages-->   
     <string name="cannotWriteTechMessage">কারিগরি বা ফরম্যাট ট্যাগ লিখতে পারি না.</string>
     <string name="discard_label">বাতিল</string>
-    <string name="ndefWriteFailed">লিখন ট্যাগ ব্যর্থ হয়েছে:%s. অনুগ্রহপূর্বক আবার চেষ্টা করুন.</string>
+    <string name="ndefWriteFailed">লিখন ট্যাগ ব্যর্থ হয়েছে: %s. আবার চেষ্টা করুন.</string>
     <string name="ndefWriteSuccess">ট্যাগ সফল লিখুন.</string>
     <string name="nfcAvailableDisabled">এনএফসি নিষ্ক্রিয় করা হয়</string>
     <string name="nfcAvailableEnabled">এনএফসি সক্রিয় করা হয়. স্ক্যান করার জন্য প্রস্তুত.</string>
@@ -23,8 +23,8 @@
     <string name="readSingleRecordNDEFMessage">সেখানে এক NDEF বার্তা.</string>
     <string name="tagLost">ট্যাগ হারিয়েছে</string>
     <string name="tagNotWritable">ট্যাগ লিখনযোগ্য নয়.</string>
-    <string name="tagTooSmallMessage">বার্তা আকার %1$d টি বাইট %2$d টি বাইট ট্যাগ ধারণক্ষমতা ছাড়িয়ে গেছে.</string>
-    <!--UI Strings-->
+    <string name="tagTooSmallMessage">বার্তা আকার %1$d বাইট %2$d বাইট ট্যাগ ধারণক্ষমতা ছাড়িয়ে গেছে.</string>
+    <!--UI Strings-->   
     <string name="add_event">ইভেন্ট যোগ করুন</string>
     <string name="address_line_1">ঠিকানা লাইন 1</string>
     <string name="address_line_2">ঠিকানা লাইন ২</string>
@@ -82,7 +82,7 @@
     <string name="type">আদর্শ</string>
     <string name="user_name">ব্যবহারকারীর নাম</string>
     <string name="welcome">স্বাগত!</string>
-    <!--Message (Toast)-->
+    <!--Message (Toast)-->   
     <string name="fill_in_mandatory_fields">বাধ্যতামূলক ক্ষেত্রগুলি পূরণ করুন</string>
     <string name="invalid_country">দেশে প্রবেশ বৈধ নয়</string>
     <string name="fill_in_caretaker_id">তত্ত্বাবধায়ক আইডি পূরণ করুন</string>
@@ -99,5 +99,28 @@
     <string name="leave_despite_not_save">আপনি এই পশু রেকর্ড সংরক্ষণ করেন নি. তুমি কি চলে যেতে চাও?</string>
     <string name="yes">হাঁ</string>
     <string name="back">পিছনে</string>
+    <string name="device_data_sync_message">ডিভাইস ডাটা অগ্রগতি আপলোড .....</string>
+    <string name="server_download_sync_message">প্রগতিতে সার্ভার ডেটা ডাউনলোড .....</string>
+    <string name="heading_new_animal_registration">নতুন প্রাণী নিবন্ধন</string>
+    <string name="heading_animal_record">পশু রেকর্ড</string>
+    <string name="error">ভুল</string>
+    <string name="error_duplicate_animal_id">ডুপ্লিকেট অ্যানিমাল আইডি পাওয়া.</string>
+    <string name="ok">ঠিক আছে</string>
+    <string name="heading_event_details">অনুষ্ঠানের বিবরণ</string>
+    <string name="heading_new_event_record">নতুন ইভেন্ট রেকর্ড</string>
+    <string name="heading_no_internet">কোন ইন্টারনেট সংযোগ</string>
+    <string name="alert_record_saved">প্রাণী রেকর্ড সংরক্ষণ করা হয়েছে.</string>
+    <string name="alert_rescan_tag">পুনরায় স্ক্যান ট্যাগ প্রাণী নিবন্ধন নিশ্চিত করতে</string>
+    <string name="alert_internet_connection_for_registration">আপনি ব্যবহারকারী নিবন্ধন করতে ইন্টারনেটের সাথে সংযুক্ত করা প্রয়োজন.</string>
+    <string name="alert_user_registered">নতুন ব্যবহারকারী সাফল্যের সাথে নিবন্ধিত হয়েছে.</string>
+    <string name="btn_register_animal">REGISTER নতুন প্রাণী</string>
+    <string name="update_record_not_synced">তথ্য: এই রেকর্ড সিঙ্ক করা হয়েছে. আপনি খোলা ক্ষেত্রের আপডেট করতে পারে.</string>
+    <string name="update_record_synced">তথ্য: এই রেকর্ড সিঙ্ক হয়েছে. আপনি শুধুমাত্র নীল ক্ষেত্র আপডেট করতে পারে.</string>
+    <string name="view_record_not_synced">তথ্য: এই রেকর্ড সিঙ্ক করা হয়েছে.</string>
+    <string name="info_record_synced">তথ্য: এই রেকর্ড সিঙ্ক হয়েছে.</string>
+    <string name="info_record_fully_filled">তথ্য: এই রেকর্ড সিঙ্ক হয়েছে. এটি একটি সম্পূর্ণরূপে পূর্ণ রেকর্ড তাই এটি সম্পাদিত করা যাবে না.</string>
+    <string name="internet_on">সিঙ্ক করার জন্য প্রস্তুত - ইন্টারনেট</string>
+    <string name="internet_off">ইন্টারনেট অফ - সিঙ্ক করার জন্য প্রস্তুত না</string>
+    <string name="num_records_not_synced">%1$d রেকর্ড (গুলি) সিঙ্ক করা হয়েছে</string>
     <string name="app_name">CCI Animal Dispersal</string>
 </resources>
