--- a/app/src/main/res/values-ur/strings.xml
+++ b/app/src/main/res/values-ur/strings.xml
@@ -1,126 +1,141 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="text"> </string>
-    <string name="add">شامل کریں</string>
-    <string name="no_records">کوئی ریکارڈ</string>
-    <string name="search_hint">تلاش کریں</string>
-    <!--NFC Messages-->
-    <string name="cannotWriteTechMessage">ٹیک یا اسنروپت ٹیگ نہیں لکھ سکتا.</string>
-    <string name="discard_label">منسوخ</string>
-    <string name="ndefWriteFailed">لکھو ٹیگ ناکام: %s. دوبارہ کوشش کریں.</string>
-    <string name="ndefWriteSuccess">ٹیگ کامیاب لکھیں.</string>
-    <string name="nfcAvailableDisabled">این ایف سی غیر فعال ہے</string>
-    <string name="nfcAvailableEnabled">این ایف سی فعال ہے. اسکین کرنے کے لئے تیار ہیں.</string>
-    <string name="nfcFailAnimalIDCheck">لکھو ٹیگ ناکام رہی: جانوروں ID جو پہلے سکین طور پر ہی نہیں.</string>
-    <string name="nfcSettingDisabled">این ایف سی ماحول میں غیر فعال.</string>
-    <string name="nfcSettingEnabled">این ایف سی کی ترتیبات میں فعال.</string>
-    <string name="nfc_not_ready">NFC OFF. این ایف سی کو چالو کریں اور تروتازہ اس بٹن نل.</string>
-    <string name="nfc_ready">اسکین کرنے کے لئے تیار ہیں</string>
-    <string name="noNfcMessage">NFC اس آلے پر کی سہولت نہیں ہے.</string>
-    <string name="readEmptyMessage">ٹیگ میں کوئی NDEF پیغامات موجود نہیں تھے.</string>
-    <string name="readMultipleRecordNDEFMessage">NDEF پیغامات کے مقابلے میں ایک سے زیادہ نہیں ہیں.</string>
-    <string name="readNonNDEFMessage">غلط NDEF پیغام.</string>
-    <string name="readSingleRecordNDEFMessage">ایک کو NDEF پیغام ہے.</string>
-    <string name="tagLost">ٹیگ کھو</string>
-    <string name="tagNotWritable">ٹیگ قابل تحریر نہیں ہے.</string>
-    <string name="tagTooSmallMessage">پیغام کا سائز %1$d بائٹس %2$d بائٹس کی ٹیگ صلاحیت سے زیادہ ہے.</string>
-    <!--UI Strings-->
-    <string name="add_event">اہم واقعہ شامل کریں</string>
-    <string name="address_line_1">پتہ لائن 1</string>
-    <string name="address_line_2">پتہ لائن 2</string>
-    <string name="address_line_3">پتہ لائن 3</string>
-    <string name="animal_details_i_heading">ANIMAL تفصیلات میں</string>
-    <string name="animal_details_ii_heading">ANIMAL تفصیلات II</string>
-    <string name="animal_id">جانوروں کی ID</string>
-    <string name="animal_id_mandatory">جانوروں کی ID *</string>
-    <string name="animal_type">جانوروں کی قسم</string>
-    <string name="animal_type_mandatory">جانوروں کی قسم *</string>
-    <string name="cancel">منسوخ کریں</string>
-    <string name="caretaker">نگران</string>
-    <string name="caretaker_heading">نگراں</string>
-    <string name="country">ملک</string>
-    <string name="country_mandatory">ملک *</string>
-    <string name="cow">گائے</string>
-    <string name="date_dispersed">تاریخ منتشر</string>
-    <string name="date_distributed">تاریخ کی تقسیم</string>
-    <string name="date_of_birth">پیدائش کی تاریخ</string>
-    <string name="date_purchased">تاریخ خریدا</string>
-    <string name="date_sold">تاریخ کی فروخت</string>
-    <string name="dispersal_ic">بازی IC</string>
-    <string name="dispersal_ic_mandatory">بازی IC *</string>
-    <string name="done">ہوگیا</string>
-    <string name="edit">EDIT</string>
-    <string name="event_date_time">واقعہ تاریخ / وقت</string>
-    <string name="event_details">پروگرام کی تفصیلات</string>
-    <string name="event_remarks">واقعہ ریمارکس</string>
-    <string name="event_type">واقعہ کی قسم</string>
-    <string name="events_heading">واقعات</string>
-    <string name="female">خواتین</string>
-    <string name="gender_mandatory">صنف *</string>
-    <string name="goat">بکری</string>
-    <string name="home">ہوم</string>
-    <string name="internet_connection_heading">انٹرنیٹ کنکشن</string>
-    <string name="male">مرد</string>
-    <string name="name">نام</string>
-    <string name="national_id_number">قومی شناختی نمبر</string>
-    <string name="nfc">این ایف سی</string>
-    <string name="no_events_here">یہاں کوئی واقعات!</string>
-    <string name="no_records_found">کوئی ریکارڈ نہیں ملا.</string>
-    <string name="on_off_heading">کبھی کبھی</string>
-    <string name="password">پاس ورڈ</string>
-    <string name="pig">سور</string>
-    <string name="purchase_price">قیمت خرید</string>
-    <string name="records_to_be_synced_heading">ریکارڈز مطابقت پذیر ہونے کیلئے</string>
-    <string name="refresh">تازہ کریں</string>
-    <string name="register">رجسٹر</string>
-    <string name="role">کردار</string>
-    <string name="sale_price">قیمت فروخت</string>
-    <string name="save">SAVE</string>
-    <string name="supervisor">سپروائزر</string>
-    <string name="sync_records">مطابقت پذیری ریکارڈز</string>
-    <string name="telephone">ٹیلی فون</string>
-    <string name="type">قسم</string>
-    <string name="user_name">رکن کا نام</string>
-    <string name="welcome">خوش آمدید!</string>
-    <!--Message (Toast)-->
-    <string name="fill_in_mandatory_fields">لازمی شعبوں میں بھرنے براہ مہربانی</string>
-    <string name="invalid_country">ملک میں داخل درست نہیں ہے</string>
-    <string name="fill_in_caretaker_id">نگران ID میں بھرنے براہ مہربانی</string>
-    <string name="internet_connection_lost">انٹرنیٹ کنکشن کھو گیا ہے. دوبارہ قائم مطابقت پذیری سے پہلے انٹرنیٹ کنکشن کے لئے براہ مہربانی.</string>
-    <string name="nfc_tag_no_animal_id">سکین NFC ٹیگ درست جانوروں کی ID ہے.</string>
-    <string name="nfc_tag_no_country">سکین NFC ٹیگ درست ملک کا ہے.</string>
-    <string name="nfc_tag_no_access">آپ کو اس ٹیگ تک رسائی کی ضرورت نہیں ہے.</string>
-    <string name="nfc_tag_no_supervisor">سکین NFC ٹیگ درست نہیں سپروائزر ہے.</string>
-    <string name="nfc_tag_not_synced">ٹیگ ڈیٹا مطابقت پذیر نہیں.</string>
-    <string name="fill_user_country_role">رکن کا نام، ملک اور کردار بھر جائے ضروری ہے.</string>
-    <string name="fill_key_for_manager">تم کنٹری مینیجر یا بین الاقوامی مینیجر کے لئے ایک اہم درج کرنا ضروری ہے.</string>
-    <string name="incorrect_key">چابی اس صارف کے کردار کے لئے داخل ہوئے غلط ہے.</string>
-    <string name="sync_success">مطابقت پذیری کامیابی سے مکمل</string>
-    <string name="leave_despite_not_save">تم اس جانور کے ریکارڈ محفوظ نہیں کی ہیں. آپ کو چھوڑ کرنا چاہتے ہیں؟</string>
-    <string name="yes">جی ہاں</string>
-    <string name="back">پیچھے</string>
-    <string name="device_data_sync_message">آلہ ڈیٹا ترقی میں اپ لوڈ کریں .....</string>
-    <string name="server_download_sync_message">پیش رفت میں سرور ڈیٹا ڈاؤن لوڈ .....</string>
-    <string name="heading_new_animal_registration">نیا جانور رجسٹریشن</string>
-    <string name="heading_animal_record">ANIMAL RECORD</string>
-    <string name="error">خرابی</string>
-    <string name="error_duplicate_animal_id">مثنی جانوروں کی ID پایا.</string>
-    <string name="ok">ٹھیک ہے</string>
-    <string name="heading_event_details">پروگرام کی تفصیلات</string>
-    <string name="heading_new_event_record">نیا اہم واقعہ ریکارڈ</string>
-    <string name="heading_no_internet">کوئی انٹرنیٹ کنکشن</string>
-    <string name="alert_record_saved">جانوروں سے ہونے والی ریکارڈ محفوظ ہوگیا ہے.</string>
-    <string name="alert_rescan_tag">دوبارہ اسکین ٹیگ جانوروں کی رجسٹریشن کی تصدیق کے لئے</string>
-    <string name="alert_internet_connection_for_registration">آپ صارف کو رجسٹر کرنے کے لئے انٹرنیٹ سے منسلک کرنے کی ضرورت ہے.</string>
-    <string name="alert_user_registered">نیا استعمال کو کامیابی سے درج کیا گیا ہے.</string>
-    <string name="btn_register_animal">نیا جانور رجسٹر</string>
-    <string name="update_record_not_synced">معلومات: یہ ریکارڈ موافقت پذیر نہیں کیا گیا ہے. تم کھلے میدانوں اپ ڈیٹ کر سکتے.</string>
-    <string name="update_record_synced">معلومات: یہ ریکارڈ موافقت پذیر کیا گیا ہے. تم صرف نیلے رنگ میں کھیتوں اپ ڈیٹ کر سکتے.</string>
-    <string name="view_record_not_synced">معلومات: یہ ریکارڈ موافقت پذیر نہیں کیا گیا ہے.</string>
-    <string name="info_record_synced">معلومات: یہ ریکارڈ موافقت پذیر کیا گیا ہے.</string>
-    <string name="info_record_fully_filled">معلومات: یہ ریکارڈ موافقت پذیر کیا گیا ہے. تو یہ ترمیم نہیں کی جاسکتی جو ایک مکمل طور پر بھرا ہوا ریکارڈ ہے.</string>
-    <string name="internet_on">مطابقت پذیر کرنے کے لئے تیار ہیں - انٹرنیٹ</string>
-    <string name="internet_off">انٹرنیٹ بند - مطابقت پذیر کرنے کے لئے تیار نہیں</string>
-    <string name="num_records_not_synced">%1$d ریکارڈز کی مطابقت پذیر نہیں کیا گیا ہے</string>
-    <string name="app_name">CCI Animal Dispersal</string>
+<string name="app_name">CCI Animal Dispersal</string>
+<string name="text"> </string>
+<string name="search_hint">تلاش</string>
+<string name="cannotWriteTechMessage">ان فارمیٹڈ ٹیگ پر نہیں لکھا جاسکتا</string>
+<string name="ndefWriteFailed">ٹیگ ناکام ہوا ہے۔ دوباراکوشش کریں %s</string>
+<string name="nfcAvailableEnabled">سکین کے لیے تیار</string>
+<string name="noNfcMessage">این ایف سی اس ڈیوائس پر موجود نہیں ہے</string>
+<string name="nfcFailAnimalIDCheck">تحریری ٹیگ ناکام ہوا:جانور کی آئی-ڈی سابقہ آی-ڈی کے مطابق نہیں ہے۔</string>
+<string name="nfcSettingDisabled">سیٹنگ میں این ایف سی بند ہے۔</string>
+<string name="nfcSettingEnabled">سیٹنگ میں این ایف سی چل رہا ہے۔</string>
+<string name="readEmptyMessage">ٹیگ میں کوئ این ڈی ای ایف میسج نہیں ہے۔</string>
+<string name="readMultipleRecordNDEFMessage">ایک سے زائد این ڈی ای ایف میسجس موجود ہیں۔</string>
+<string name="readNonNDEFMessage">این ڈی ای ایف میسج درست نہیں</string>
+<string name="readSingleRecordNDEFMessage">ایک این ڈی ای ایف میسج ہے</string>
+<string name="tagLost">ٹیگ گم ہوگیا ہے</string>
+<string name="tagNotWritable">ٹیگ قابلِ تحریر نہیں</string>
+<string name="tagTooSmallMessage">میسج کا ساٰٰٰئزٹیگ کی گنجائش سے تجاوزکررہاہے۔</string>
+<string name="add_event">ایونٹ کا اندراج</string>
+<string name="address_line_1">پتالائن ١</string>
+<string name="address_line_2">پتا لائن ٢</string>
+<string name="address_line_3">پتا لائن ٣</string>
+<string name="animal_details_i_heading">جانور کی تفصیل ١</string>
+<string name="animal_details_ii_heading">جانور کی تفصیل ٢</string>
+<string name="animal_id">جانور کی آئ ڈی</string>
+<string name="animal_id_mandatory">جانور کی آئ ڈی*</string>
+<string name="animal_type">جانور کی قسم</string>
+<string name="animal_type_mandatory">جانور کی قسم*</string>
+<string name="cancel">کینسل</string>
+<string name="caretaker">نگران</string>
+<string name="caretaker_heading">نگران</string>
+<string name="country">کنٹری</string>
+<string name="country_mandatory">کنٹری*</string>
+<string name="cow">گائے</string>
+<string name="date_dispersed">تاریخ ڈسپرسڈ</string>
+<string name="date_distributed">تاریخ تقسیم</string>
+<string name="date_of_birth">تاریخ پیدائش</string>
+<string name="date_purchased">تاریخ خریداری</string>
+<string name="date_sold">تاریخ فروخت</string>
+<string name="dispersal_ic">ڈَسِپرسل آئ سی</string>
+<string name="dispersal_ic_mandatory">ڈَسِپرسل آئ سی*</string>
+<string name="done">مکمل ہوچکا</string>
+<string name="edit">ترمیم</string>
+<string name="event_details">ایونٹ کی تفصیل</string>
+<string name="event_remarks">ایونٹ کے ریمارکس</string>
+<string name="event_type">ایونٹ کی قِسم</string>
+<string name="events_heading">ایونٹس</string>
+<string name="female">مادہ</string>
+<string name="gender_mandatory">جنس</string>
+<string name="goat">بکری</string>
+<string name="home">ہوم</string>
+<string name="internet_connection_heading">انٹرنیٹ کنیکشن</string>
+<string name="male">نر</string>
+<string name="name">نام</string>
+<string name="national_id_number">نیشنل آئ ڈی نمبر</string>
+<string name="nfc">این ایف سی</string>
+<string name="no_events_here">کوئ ایونٹ نہیں ہے!</string>
+<string name="no_records_found">کوئ ریکارڈ نہیں مِلا۔</string>
+<string name="password">پاس ورڈ</string>
+<string name="pig">خنزیر</string>
+<string name="purchase_price">قیمتِ خرید</string>
+<string name="refresh">ریفریش</string>
+<string name="register"> رجِسٹر</string>
+<string name="role">رول</string>
+<string name="sale_price">قیمتِ فروخت</string>
+<string name="save">محفوظ کریں</string>
+<string name="sync_records">موجودہ ریکارڈ سنک کریں</string>
+<string name="telephone">ٹیلی فون</string>
+<string name="user_name">صارف کا نام</string>
+<string name="welcome">خوش آمدید!</string>
+<string name="fill_in_mandatory_fields">برائےمہربانی ضروری کوائف پُرکریں</string>
+<string name="fill_in_caretaker_id">برائےمہربانی نگران کا آئ ڈی پُر کریں</string>
+<string name="internet_connection_lost">انٹرنیٹ کنیکشن نہیں ہے۔پہلے انٹرنیٹ کنیکشن بحال کریں ۔</string>
+<string name="nfc_tag_no_animal_id">سکین کیے جانے والے ٹیگ پر جانور کا آئ ڈی درست نہیں ہے  </string>
+<string name="nfc_tag_no_country">سکین کیے جانے والے ٹیگ پر مُلک درست نہیں ہے</string>
+<string name="nfc_tag_no_access">آپ کی اس ٹیگ تک رساٰئ ہے</string>
+<string name="nfc_tag_no_supervisor">سکین کیے جانے والے ٹیگ پر ڈِسپرسل آئ سی درست نہیں ہے</string>
+<string name="nfc_tag_not_synced">ٹیگ کا ڈیٹا سِنک نہیں ہوا</string>
+<string name="fill_user_country_role">صارف کا نام، مُلک اور کام کا پُر کیا جانا لازمی ہے</string>
+<string name="fill_key_for_manager">کنٹری مینیجر اور انٹرنیشنل مینیجرکے لیے ایک کیِ کا اندراج لازمی ہے</string>
+<string name="incorrect_key">اِس رول کے لیے اندراج کِی درست نہیں</string>
+<string name="sync_success">سارا مواد کامیابی سے سِنک ہوچُکا ہے</string>
+<string name="leave_despite_not_save">آپ نے اِس جانور کا ریکارڈ محفوظ نہیں کیا۔ کیا آپ واپس جانا چاہتے ہیں؟</string>
+<string name="yes">ہاں</string>
+<string name="back">واپس</string>
+<string name="device_data_sync_message">ڈیوائس ڈیٹا اپ لوڈ ہورہا ہے</string>
+<string name="server_download_sync_message">سرور ڈیٹا ڈاوًن لوڈ ہورہا ہے</string>
+<string name="heading_new_animal_registration">نئے جانور کی رجِسٹریشن</string>
+<string name="heading_animal_record">جانور کا ریکارڈ</string>
+<string name="error">ایرر</string>
+<string name="error_duplicate_animal_id">ڈوپلیکیٹ جانور موجود ہے</string>
+<string name="ok">اوکے</string>
+<string name="heading_event_details">ایونٹ کی تفصیل</string>
+<string name="heading_new_event_record">نئے ایونٹ کا ریکارڈ</string>
+<string name="heading_no_internet">اِنٹرنیٹ کنیکشن مُنقطع ہے</string>
+<string name="alert_record_saved">جانور کا ریکارڈ محفوظ ہو گیا ہے</string>
+<string name="alert_rescan_tag">جانور کی رجِسٹریشن کے لیے ٹیگ دوبارہ سکین کریں</string>
+<string name="alert_internet_connection_for_registration">صارف کی رجِسٹریشن کے لیے اِنٹرنیٹ کنیکشن ضروری ہے</string>
+<string name="alert_user_registered">نئا صارف کامیابی سے رجِسٹر ہو گیا ہے</string>
+<string name="btn_register_animal">نئے جانور کی رجِسٹریشین</string>
+<string name="update_record_not_synced">معلومات: یہ ریکارڈ سِنک ہوچکا ہے۔آپ خالی جگہ کو اپڈیٹ کرسکتےہیں۔</string>
+<string name="update_record_synced">معلومات: یہ ریکارڈ سِنک ہوچکا ہے۔آپ صرف نیلےرنگ والی جگہ اپ ڈیت کرسکتے</string>
+<string name="view_record_not_synced">معلومات: یہ ریکارڈ سِنک نہیں ہوا۔</string>
+<string name="info_record_synced">معلومات: یہ ریکارڈ سِنک ہوچکا ہے۔</string>
+<string name="info_record_fully_filled">معلومات: یہ ریکارڈ سِنک ہوچکا ہے۔مکمل ہونے کی وجہ سے ترمیم نہیںکی جاسکتی۔</string>
+<string name="internet_on">انٹرنیٹ آن: سِنک کے لیے تیار</string>
+<string name="internet_off">انٹرنیٹ آف: سِنک نہیں وہ سکتا</string>
+<string name="num_records_not_synced">%1$d ریکارڈ سِنک نہیں ہوُے</string>
+<string name="add_an_event">ایونٹ کا اندراج</string>
+<string name="search_results">تحقیق کے نتائج</string>
+<string name="add_an_animal">ایک اور جانور شامل کریں</string>
+<string name="settings">سیٹیِنگ</string>
+<string name="nfcAvailableDisabled">این-ایف-سی آن کریں</string>
+<string name="nfcOff">این-ایف-سی آف</string>
+<string name="nfcOn">این-ایف-سی آن</string>
+<string name="nfcNotAvailable">این-ایف-سی دستیاب نھیں ہے</string>
+<string name="all_records_synced">تمام ریکارڈ سینک ہو چکا ہے</string>
+<string name="sync_upload_error">ڈیٹا اپ لوڈ کرنے میں خرابی آرہی ہے۔ دوبارہ کوشش کریں</string>
+<string name="sync_status_on">ابھی سینک کریں</string>
+<string name="sync_status_off">سینک دستیاب نہیں ہے</string>
+<string name="enter_search">تلاش کریں</string>
+<string name="event_date">ایونٹ کی تاریخ</string>
+<string name="event_time">ایونٹ کا وقت</string>
+<string name="language">زبان</string>
+<string name="nfc_location_scan_error">خرابی۔ ٹیگ صرف ہوم سکرین سے سکین کیا جاسکتاہے۔</string>
+<string name="event_details_not_filled_error">ایوینٹ کی قسم،تاریخ اور وقت کا اندراج ضروری ہے</string>
+<string name="error_key_download">کیز ڈاون لوڈ کرنے میں خرابی آرہی ہے۔</string>
+<string name="country_bangla">بنگلا دیش</string>
+<string name="country_pakistan">پاکستان</string>
+<string name="country_philippines">فلپائن</string>
+<string name="role_cm">کنٹری مینیجر</string>
+<string name="role_im">اِنٹرنیشنل مینیجر</string>
+<string name="lang_bangla">بنگالی</string>
+<string name="lang_eng">انگریزی</string>
+<string name="lang_urdu">اردو</string>
+<string name="purchase_weight">خریدتے وقت وزن</string>
+<string name="purchase_height">خریدتے وقت قد</string>
+<string name="sale_weight">فروخت کرتے وقت وزن</string>
+<string name="sale_height">فروخت کرتے وقت قد</string>
 </resources>
