--- a/app/src/main/res/values-bn/strings.xml
+++ b/app/src/main/res/values-bn/strings.xml
@@ -1,126 +1,141 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="text"> </string>
-    <string name="add">যোগ</string>
-    <string name="no_records">কোন রেকর্ডস</string>
-    <string name="search_hint">অনুসন্ধান</string>
-    <!--NFC Messages-->   
-    <string name="cannotWriteTechMessage">কারিগরি বা ফরম্যাট ট্যাগ লিখতে পারি না.</string>
-    <string name="discard_label">বাতিল</string>
-    <string name="ndefWriteFailed">লিখন ট্যাগ ব্যর্থ হয়েছে: %s. আবার চেষ্টা করুন.</string>
-    <string name="ndefWriteSuccess">ট্যাগ সফল লিখুন.</string>
-    <string name="nfcAvailableDisabled">এনএফসি নিষ্ক্রিয় করা হয়</string>
-    <string name="nfcAvailableEnabled">এনএফসি সক্রিয় করা হয়. স্ক্যান করার জন্য প্রস্তুত.</string>
-    <string name="nfcFailAnimalIDCheck">লিখন ট্যাগ ব্যর্থ হয়েছে: প্রাণী আইডি পূর্বে স্ক্যান হিসাবে একই নয়.</string>
-    <string name="nfcSettingDisabled">এনএফসি সেটিংসে নিষ্ক্রিয়.</string>
-    <string name="nfcSettingEnabled">এনএফসি সেটিংস সক্রিয়.</string>
-    <string name="nfc_not_ready">NFC বন্ধ. এনএফসি চালু করুন এবং রিফ্রেশ করতে এই বাটন ট্যাপ.</string>
-    <string name="nfc_ready">স্ক্যান করার জন্য প্রস্তুত</string>
-    <string name="noNfcMessage">এনএফসি এই ডিভাইসে সমর্থিত নয়.</string>
-    <string name="readEmptyMessage">ট্যাগে কোন NDEF পরেনি ছিল.</string>
-    <string name="readMultipleRecordNDEFMessage">সেখানে NDEF বার্তা চেয়ে একাধিক হয়.</string>
-    <string name="readNonNDEFMessage">অবৈধ NDEF বার্তা.</string>
-    <string name="readSingleRecordNDEFMessage">সেখানে এক NDEF বার্তা.</string>
-    <string name="tagLost">ট্যাগ হারিয়েছে</string>
-    <string name="tagNotWritable">ট্যাগ লিখনযোগ্য নয়.</string>
-    <string name="tagTooSmallMessage">বার্তা আকার %1$d বাইট %2$d বাইট ট্যাগ ধারণক্ষমতা ছাড়িয়ে গেছে.</string>
-    <!--UI Strings-->   
-    <string name="add_event">ইভেন্ট যোগ করুন</string>
-    <string name="address_line_1">ঠিকানা লাইন 1</string>
-    <string name="address_line_2">ঠিকানা লাইন ২</string>
-    <string name="address_line_3">ঠিকানা লাইন 3</string>
-    <string name="animal_details_i_heading">পশু বিবরণ আমি</string>
-    <string name="animal_details_ii_heading">পশু বিস্তারিত -২</string>
-    <string name="animal_id">প্রাণী আইডি</string>
-    <string name="animal_id_mandatory">প্রাণী আইডি *</string>
-    <string name="animal_type">প্রাণী প্রকার</string>
-    <string name="animal_type_mandatory">প্রাণী প্রকার *</string>
-    <string name="cancel">বাতিল</string>
-    <string name="caretaker">তত্ত্বাবধায়ক</string>
-    <string name="caretaker_heading">তত্ত্বাবধায়ক</string>
-    <string name="country">দেশ</string>
-    <string name="country_mandatory">দেশ *</string>
-    <string name="cow">গাভী</string>
-    <string name="date_dispersed">তারিখ বিচ্ছুরিত</string>
-    <string name="date_distributed">তারিখ ডিসট্রিবিউটেড</string>
-    <string name="date_of_birth">জন্ম তারিখ</string>
-    <string name="date_purchased">কেনার তারিখ</string>
-    <string name="date_sold">তারিখ বিক্রি</string>
-    <string name="dispersal_ic">ছত্রভঙ্গ আইসি</string>
-    <string name="dispersal_ic_mandatory">ছত্রভঙ্গ আইসি *</string>
-    <string name="done">সম্পন্ন</string>
-    <string name="edit">এর EDIT</string>
-    <string name="event_date_time">ইভেন্ট তারিখ / সময়</string>
-    <string name="event_details">অনুষ্ঠানের বিবরণ</string>
-    <string name="event_remarks">ইভেন্ট মন্তব্য</string>
-    <string name="event_type">ইভেন্টের ধরণ</string>
-    <string name="events_heading">ঘটনাগুলি দেখুন</string>
-    <string name="female">মহিলা</string>
-    <string name="gender_mandatory">জেন্ডার *</string>
-    <string name="goat">ছাগল</string>
-    <string name="home">বাড়ি</string>
-    <string name="internet_connection_heading">ইন্টারনেট সংযোগ</string>
-    <string name="male">পুরুষ</string>
-    <string name="name">নাম</string>
-    <string name="national_id_number">আমি বসা ছিল</string>
-    <string name="nfc">এনএফসি</string>
-    <string name="no_events_here">এখানে কোন ঘটনা!</string>
-    <string name="no_records_found">কোন রেকর্ড পাওয়া যায়.</string>
-    <string name="on_off_heading">চালু / বন্ধ</string>
-    <string name="password">পাসওয়ার্ড</string>
-    <string name="pig">শূকর</string>
-    <string name="purchase_price">ক্রয় মূল্য</string>
-    <string name="records_to_be_synced_heading">রেকর্ডস সিঙ্ক করার জন্য</string>
-    <string name="refresh">সতেজ করা</string>
-    <string name="register">নিবন্ধন</string>
-    <string name="role">ভূমিকা</string>
-    <string name="sale_price">বিক্রয় মূল্য</string>
-    <string name="save">সংরক্ষণ করুন</string>
-    <string name="supervisor">কর্মকর্তা</string>
-    <string name="sync_records">সিঙ্ক রেকর্ডস</string>
-    <string name="telephone">টেলিফোন</string>
-    <string name="type">আদর্শ</string>
-    <string name="user_name">ব্যবহারকারীর নাম</string>
-    <string name="welcome">স্বাগত!</string>
-    <!--Message (Toast)-->   
-    <string name="fill_in_mandatory_fields">বাধ্যতামূলক ক্ষেত্রগুলি পূরণ করুন</string>
-    <string name="invalid_country">দেশে প্রবেশ বৈধ নয়</string>
-    <string name="fill_in_caretaker_id">তত্ত্বাবধায়ক আইডি পূরণ করুন</string>
-    <string name="internet_connection_lost">ইন্টারনেট সংযোগ বিচ্ছিন্ন হয়েছে. পুনঃপ্রতিষ্ঠা সিঙ্ক আগে ইন্টারনেট সংযোগ করুন.</string>
-    <string name="nfc_tag_no_animal_id">NFC ট্যাগ স্ক্যান কোন বৈধ প্রাণী আইডি আছে.</string>
-    <string name="nfc_tag_no_country">NFC ট্যাগ স্ক্যান কোন বৈধ দেশ হয়েছে.</string>
-    <string name="nfc_tag_no_access">আপনি এই ট্যাগটি এক্সেস আছে না.</string>
-    <string name="nfc_tag_no_supervisor">NFC ট্যাগ স্ক্যান কোন বৈধ সুপারভাইজার রয়েছে.</string>
-    <string name="nfc_tag_not_synced">ট্যাগ ডেটা সিঙ্ক না.</string>
-    <string name="fill_user_country_role">ব্যবহারকারীর নাম, দেশ এবং ভূমিকা পূরণ করা আবশ্যক.</string>
-    <string name="fill_key_for_manager">আপনি কান্ট্রি ম্যানেজার বা আন্তর্জাতিক ম্যানেজার এর জন্য একটি কী লিখতে হবে.</string>
-    <string name="incorrect_key">কী এই ব্যবহারকারী ভূমিকার জন্য সেটি ভুল.</string>
-    <string name="sync_success">সিঙ্ক সফলভাবে সম্পন্ন</string>
-    <string name="leave_despite_not_save">আপনি এই পশু রেকর্ড সংরক্ষণ করেন নি. তুমি কি চলে যেতে চাও?</string>
-    <string name="yes">হাঁ</string>
-    <string name="back">পিছনে</string>
-    <string name="device_data_sync_message">ডিভাইস ডাটা অগ্রগতি আপলোড .....</string>
-    <string name="server_download_sync_message">প্রগতিতে সার্ভার ডেটা ডাউনলোড .....</string>
-    <string name="heading_new_animal_registration">নতুন প্রাণী নিবন্ধন</string>
-    <string name="heading_animal_record">পশু রেকর্ড</string>
-    <string name="error">ভুল</string>
-    <string name="error_duplicate_animal_id">ডুপ্লিকেট অ্যানিমাল আইডি পাওয়া.</string>
-    <string name="ok">ঠিক আছে</string>
-    <string name="heading_event_details">অনুষ্ঠানের বিবরণ</string>
-    <string name="heading_new_event_record">নতুন ইভেন্ট রেকর্ড</string>
-    <string name="heading_no_internet">কোন ইন্টারনেট সংযোগ</string>
-    <string name="alert_record_saved">প্রাণী রেকর্ড সংরক্ষণ করা হয়েছে.</string>
-    <string name="alert_rescan_tag">পুনরায় স্ক্যান ট্যাগ প্রাণী নিবন্ধন নিশ্চিত করতে</string>
-    <string name="alert_internet_connection_for_registration">আপনি ব্যবহারকারী নিবন্ধন করতে ইন্টারনেটের সাথে সংযুক্ত করা প্রয়োজন.</string>
-    <string name="alert_user_registered">নতুন ব্যবহারকারী সাফল্যের সাথে নিবন্ধিত হয়েছে.</string>
-    <string name="btn_register_animal">REGISTER নতুন প্রাণী</string>
-    <string name="update_record_not_synced">তথ্য: এই রেকর্ড সিঙ্ক করা হয়েছে. আপনি খোলা ক্ষেত্রের আপডেট করতে পারে.</string>
-    <string name="update_record_synced">তথ্য: এই রেকর্ড সিঙ্ক হয়েছে. আপনি শুধুমাত্র নীল ক্ষেত্র আপডেট করতে পারে.</string>
-    <string name="view_record_not_synced">তথ্য: এই রেকর্ড সিঙ্ক করা হয়েছে.</string>
-    <string name="info_record_synced">তথ্য: এই রেকর্ড সিঙ্ক হয়েছে.</string>
-    <string name="info_record_fully_filled">তথ্য: এই রেকর্ড সিঙ্ক হয়েছে. এটি একটি সম্পূর্ণরূপে পূর্ণ রেকর্ড তাই এটি সম্পাদিত করা যাবে না.</string>
-    <string name="internet_on">সিঙ্ক করার জন্য প্রস্তুত - ইন্টারনেট</string>
-    <string name="internet_off">ইন্টারনেট অফ - সিঙ্ক করার জন্য প্রস্তুত না</string>
-    <string name="num_records_not_synced">%1$d রেকর্ড (গুলি) সিঙ্ক করা হয়েছে</string>
-    <string name="app_name">CCI Animal Dispersal</string>
+<string name="app_name">CCI Animal Dispersal</string>
+<string name="text"> </string>
+<string name="search_hint">খোঁজ করুন</string>
+<string name="cannotWriteTechMessage">প্রযুক্তি লিখতে পারা যায় না অথবা ফরম্যাটবিহীন ট্যাগ।</string>
+<string name="ndefWriteFailed">ট্যাগ লেখা ব্যর্থ। দয়া করে আবার চেষ্টা করুন। %s</string>
+<string name="nfcAvailableEnabled">স্ক্যান করতে প্রস্তুত।</string>
+<string name="noNfcMessage">এই ডিভাইস এনএফসি সাপোর্ট করে না।</string>
+<string name="nfcFailAnimalIDCheck">ট্যাগ লেখা ব্যর্থ। বর্তমান পশু আইডি পূর্বে স্ক্যানকৃত আইডি এক না।</string>
+<string name="nfcSettingDisabled">সেটিং-এ এনএফসি অচল ।</string>
+<string name="nfcSettingEnabled">সেটিং-এ এনএফসি সচল ।</string>
+<string name="readEmptyMessage">ট্যাগ-এ কোন এনডিইএফ মেসেজ ছিল না ।</string>
+<string name="readMultipleRecordNDEFMessage">এনডিইএফ মেসেজ ছাড়া বহু মেসেজ।</string>
+<string name="readNonNDEFMessage">অকার্যকর এনডিইএফ মেসেজ।</string>
+<string name="readSingleRecordNDEFMessage">একটি এনডিইএফ মেসেজ আছে।</string>
+<string name="tagLost">ট্যাগ হারিয়ে গেছে।</string>
+<string name="tagNotWritable">ট্যাগ লিখনযোগ্য না।</string>
+<string name="tagTooSmallMessage">মেসেজ আকার %1$d ট্যাগ ধারণক্ষমতা %2$d অতিক্রম করেছে।</string>
+<string name="add_event">ঘটনা যোগ করুন।</string>
+<string name="address_line_1">ঠিকানা লাইন ১</string>
+<string name="address_line_2">ঠিকানা লাইন ২</string>
+<string name="address_line_3">ঠিকানা লাইন ৩</string>
+<string name="animal_details_i_heading">পশুর বিবরণ ১</string>
+<string name="animal_details_ii_heading">পশুর বিবরণ ২</string>
+<string name="animal_id">পশু আইডি</string>
+<string name="animal_id_mandatory">পশু আইডি *</string>
+<string name="animal_type">পশুর ধরণ </string>
+<string name="animal_type_mandatory">পশুর ধরণ *</string>
+<string name="cancel">বাতিল</string>
+<string name="caretaker">তত্ত্বাবধায়ক</string>
+<string name="caretaker_heading">তত্ত্বাবধায়ক</string>
+<string name="country">দেশ</string>
+<string name="country_mandatory">দেশ*</string>
+<string name="cow">গরু</string>
+<string name="date_dispersed">বিতরন তারিখ</string>
+<string name="date_distributed">বিতরন তারিখ</string>
+<string name="date_of_birth">জন্ম তারিখ</string>
+<string name="date_purchased">ক্রয়ের তারিখ</string>
+<string name="date_sold">বিক্রয়ের তারিখ</string>
+<string name="dispersal_ic">বিতরণ ইন-চার্জ</string>
+<string name="dispersal_ic_mandatory">বিতরণ ইন-চার্জ *</string>
+<string name="done">সম্পন্ন</string>
+<string name="edit">সম্পাদন করা</string>
+<string name="event_details">ঘটনা বিবরণ</string>
+<string name="event_remarks">ঘটনা মন্তব্য</string>
+<string name="event_type">ঘটনা ধরণ</string>
+<string name="events_heading">ঘটনাবলী</string>
+<string name="female">মাদী</string>
+<string name="gender_mandatory">লিঙ্গ *</string>
+<string name="goat">ছাগল</string>
+<string name="home">হোম</string>
+<string name="internet_connection_heading">ইন্টারনেট সংযোগ</string>
+<string name="male">এঁড়ে</string>
+<string name="name">নাম</string>
+<string name="national_id_number">জাতীয় আইডি নম্বর</string>
+<string name="nfc">এনএফসি</string>
+<string name="no_events_here">এখানে কোন ঘটনাবলী নাই!</string>
+<string name="no_records_found">কোন রেকর্ড পাওয়া যায়নি।</string>
+<string name="password">সংকেত শব্দ</string>
+<string name="pig">শুকর</string>
+<string name="purchase_price">ক্রয়মূল্য</string>
+<string name="refresh">রিফ্রেশ</string>
+<string name="register">নিবন্ধন</string>
+<string name="role">ভূমিকা</string>
+<string name="sale_price">বিক্রয়মূল্য</string>
+<string name="save">সেভ করা</string>
+<string name="sync_records">রেকর্ড সিঙ্ক করা</string>
+<string name="telephone">টেলিফোন</string>
+<string name="user_name">ব্যবহারকারীর নাম</string>
+<string name="welcome">স্বাগতম !</string>
+<string name="fill_in_mandatory_fields">দয়া করে বাধ্যতামূলক ক্ষেত্রগুলি পূরণ করুন</string>
+<string name="fill_in_caretaker_id">দয়া করে তত্ত্বাবধায়ক আইডি পূরণ করুন</string>
+<string name="internet_connection_lost">ইন্টারনেট সংযোগ বিচ্ছিন্ন। সিঙ্ক করার আগে পুনরায় সংযোগ স্থাপন করুন।</string>
+<string name="nfc_tag_no_animal_id">স্ক্যানকৃত এনএফসি ট্যাগ-এর বৈধ পশু আইডি নাই।</string>
+<string name="nfc_tag_no_country">স্ক্যানকৃত এনএফসি ট্যাগ-এর বৈধ দেশ আইডি  নাই।</string>
+<string name="nfc_tag_no_access">এই ট্যাগ-এ আপনি প্রবেশ করতে পারবেন না।</string>
+<string name="nfc_tag_no_supervisor">স্ক্যানকৃত এনএফসি ট্যাগ-এর বৈধ বিতরণ ইন-চার্জ নাই।</string>
+<string name="nfc_tag_not_synced">ট্যাগ তথ্য সিঙ্ক না।</string>
+<string name="fill_user_country_role">ব্যবহারকারীর নাম, দেশ এবং ভূমিকা অবশ্যই পূরণ করতে হবে।</string>
+<string name="fill_key_for_manager">আপনাকে অবশই জাতীয় ব্যবস্থাপক বা আন্তর্জাতিক ব্যবস্থাপক-এর জন্য একটি কী প্রবেশ করাতে হবে।</string>
+<string name="incorrect_key">এই ব্যবহারকারীর ভূমিকা জন্য যে কী প্রবেশ করানো হয়েছে তা ভুল।</string>
+<string name="sync_success">সফলভাবে সিঙ্ক সম্পন্ন হল</string>
+<string name="leave_despite_not_save">আপনি এই পশুর রেকর্ড সেভ করেননি। আপনি কি বের হতে চান?</string>
+<string name="yes">হ্যাঁ</string>
+<string name="back">পিছনে</string>
+<string name="device_data_sync_message">ডিভাইস তথ্য আপলোড চলছে...</string>
+<string name="server_download_sync_message">সার্ভার তথ্য ডাউনলোড চলছে...</string>
+<string name="heading_new_animal_registration">নূতন পশু নিবন্ধন</string>
+<string name="heading_animal_record">পশু রেকর্ড</string>
+<string name="error">ভুল</string>
+<string name="error_duplicate_animal_id">একই রকম আরেকটি পশু আইডি পাওয়া গেছে।</string>
+<string name="ok">ঠিক</string>
+<string name="heading_event_details">ঘটনা বিস্তারিত</string>
+<string name="heading_new_event_record">নূতন ঘটনা রেকর্ড</string>
+<string name="heading_no_internet">ইন্টারনেট সংযোগ নাই</string>
+<string name="alert_record_saved">পশু রেকর্ড সেভ করা হয়েছে।</string>
+<string name="alert_rescan_tag">পশু নিবন্ধন নিশ্চিত হতে ট্যাগ পুনরায় স্ক্যান করুন।</string>
+<string name="alert_internet_connection_for_registration">ব্যবহারকারী নিবন্ধন করতে আপনাকে ইন্টারনেট সংযোগ করতে হবে।</string>
+<string name="alert_user_registered">নূতন ব্যবহারকারী সফলভাবে নিবন্ধন হয়েছে।</string>
+<string name="btn_register_animal">নূতন পশু নিবন্ধন</string>
+<string name="update_record_not_synced">তথ্য: এই রেকর্ড সিঙ্ক হয়নি। আপনি খোলা ফিল্ড আপডেট করতে পারেন।</string>
+<string name="update_record_synced">তথ্য: এই রেকর্ড সিঙ্ক হয়েছে। আপনি শুধুমাত্র নীল ফিল্ড আপডেট করতে পারেন।</string>
+<string name="view_record_not_synced">তথ্য: এই রেকর্ড সিঙ্ক হয়নি।</string>
+<string name="info_record_synced">তথ্য: এই রেকর্ড সিঙ্ক হয়েছে।</string>
+<string name="info_record_fully_filled">তথ্য: এই রেকর্ড সিঙ্ক হয়েছে। এটি সম্পূর্ণভাবে পূর্ণ রেকর্ড সুতরাং এটি এডিট করা যাবে না।</string>
+<string name="internet_on">ইন্টারনেট চালু - সিঙ্ক করতে প্রস্তুত</string>
+<string name="internet_off">ইন্টারনেট বন্ধ - সিঙ্ক করতে প্রস্তুত না</string>
+<string name="num_records_not_synced">%1$d রেকর্ড(গুলো) সিঙ্ক হয়নি</string>
+<string name="add_an_event">একটি ঘটনা যোগ করুন</string>
+<string name="search_results">অনুসন্ধান ফলাফল</string>
+<string name="add_an_animal">একটি পশু যোগ করুন</string>
+<string name="settings">সেটিংস</string>
+<string name="nfcAvailableDisabled">এনএফসি চালু করুন</string>
+<string name="nfcOff">এনএফসি বন্ধ</string>
+<string name="nfcOn">এনএফসি চালু</string>
+<string name="nfcNotAvailable">এনএফসি নাই</string>
+<string name="all_records_synced">সমস্ত রেকর্ড সুসংগত হয়েছে</string>
+<string name="sync_upload_error">তথ্য আপলোড ভুল হচ্ছে। আবার চেষ্টা করুন।</string>
+<string name="sync_status_on">এখন সিঙ্ক করুন</string>
+<string name="sync_status_off">সিঙ্ক নাই</string>
+<string name="enter_search">সার্চ এন্টার করুন</string>
+<string name="event_date">ঘটনা তারিখ</string>
+<string name="event_time">ঘটনা সময়</string>
+<string name="language">ভাষা</string>
+<string name="nfc_location_scan_error">ভুল। আপনি শুধুমাত্র হোম স্ক্রিন থেকে একটি ট্যাগ স্ক্যান করতে পারেন।</string>
+<string name="event_details_not_filled_error">ঘটনা ধরন, তারিখ এবং সময় অবশই পূরণ করতে হবে</string>
+<string name="error_key_download">ভুল ডাউনলোড কীগুলো।</string>
+<string name="country_bangla">বাংলাদেশ</string>
+<string name="country_pakistan">পাকিস্তান</string>
+<string name="country_philippines">ফিলিপাইন</string>
+<string name="role_cm">জাতীয় ব্যবস্থাপক</string>
+<string name="role_im">আন্তর্জাতিক ব্যবস্থাপক</string>
+<string name="lang_bangla">বাংলা</string>
+<string name="lang_eng">ইংরেজি</string>
+<string name="lang_urdu">উর্দু</string>
+<string name="purchase_weight">ক্রয়ের সময়ে ওজন</string>
+<string name="purchase_height">ক্রয়ের সময়ে উচ্চতা</string>
+<string name="sale_weight">বিক্রয়ের সময়ে ওজন</string>
+<string name="sale_height">বিক্রয়ের সময়ে উচ্চতা</string>
 </resources>
