--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,26 +1,20 @@
 <resources>
     <string name="app_name">CCI Animal Dispersal</string>
+    <string name="debug_app_name">CCI Debug</string>
     <string name="text"> </string>
-    <string name="add">Add</string>
-    <string name="no_records">No Records</string>
     <string name="search_hint">Search</string>
     <!--NFC Messages-->
     <string name="cannotWriteTechMessage">Cannot write tech or unformatted tag.</string>
-    <string name="discard_label">CANCEL</string>
     <string name="ndefWriteFailed">Write tag failed: %s. Please try again.</string>
-    <string name="ndefWriteSuccess">Write tag successful.</string>
     <string name="nfcAvailableDisabled">Turn On NFC</string>
     <string name="nfcOff">NFC Off</string>
     <string name="nfcAvailableEnabled">Ready to Scan</string>
     <string name="nfcOn">NFC On</string>
     <string name="nfcNotAvailable">NFC Not Available</string>
     <string name="noNfcMessage">NFC is not supported on this device.</string>
-
-    <string name="nfcFailAnimalIDCheck">Write tag failed: Animal ID not the same as previously scanned.</string>
+    <string name="nfcFailAnimalIDCheck">Write tag failed: Animal ID is not the same as previously scanned.</string>
     <string name="nfcSettingDisabled">NFC disabled in settings.</string>
     <string name="nfcSettingEnabled">NFC enabled in settings.</string>
-    <string name="nfc_not_ready">NFC OFF. Turn on NFC and Tap this Button to Refresh.</string>
-    <string name="nfc_ready">Ready to scan</string>
     <string name="readEmptyMessage">There were no NDEF messages in the tag.</string>
     <string name="readMultipleRecordNDEFMessage">There are multiple than NDEF messages.</string>
     <string name="readNonNDEFMessage">Invalid NDEF message.</string>
@@ -54,7 +48,6 @@
     <string name="dispersal_ic_mandatory">Dispersal IC *</string>
     <string name="done">Done</string>
     <string name="edit">EDIT</string>
-    <string name="event_date_time">Event Date/Time</string>
     <string name="event_details">EVENT DETAILS</string>
     <string name="event_remarks">Event Remarks</string>
     <string name="event_type">Event Type</string>
@@ -70,11 +63,9 @@
     <string name="nfc">NFC</string>
     <string name="no_events_here">No events here!</string>
     <string name="no_records_found">No records found.</string>
-    <string name="on_off_heading">ON / OFF</string>
     <string name="password">Password</string>
     <string name="pig">Pig</string>
     <string name="purchase_price">Purchase Price</string>
-    <string name="records_to_be_synced_heading">Records To Be Synced</string>
     <string name="refresh">Refresh</string>
     <string name="register">Register</string>
     <string name="role">Role</string>
@@ -86,7 +77,6 @@
     <string name="welcome">WELCOME!</string>
     <!--Message (Toast)-->
     <string name="fill_in_mandatory_fields">Please fill in the mandatory fields</string>
-    <string name="invalid_country">The country entered is not valid</string>
     <string name="fill_in_caretaker_id">Please fill in the Caretaker Id</string>
     <string name="internet_connection_lost">Internet Connection has been lost. Please re-establish internet connection before sync.</string>
     <string name="nfc_tag_no_animal_id">NFC tag scanned has no valid Animal ID.</string>
@@ -132,5 +122,24 @@
     <string name="sync_upload_error">Error uploading the data. Please try again.</string>
     <string name="sync_status_on">Sync Now</string>
     <string name="sync_status_off">Sync Unavailable</string>
+    <string name="enter_search">Enter Search</string>
+    <string name="event_date">Event Date</string>
+    <string name="event_time">Event Time</string>
+    <string name="language">LANGUAGE</string>
+    <string name="nfc_location_scan_error">Error. You can only scan a tag from the home screen.</string>
+    <string name="event_details_not_filled_error">Event Type, Date and Time must be filled</string>
+    <string name="error_key_download">Error downloading keys.</string>
+	<string name="country_bangla">Bangladesh</string>
+	<string name="country_pakistan">Pakistan</string>
+	<string name="country_philippines">Philippines</string>
+	<string name="role_cm">Country Manager</string>
+	<string name="role_im">International Manager</string>
+	<string name="lang_bangla">Bengali বাংলা</string>
+	<string name="lang_eng">English</string>
+	<string name="lang_urdu">Urdu اردو</string>
+    <string name="purchase_weight">Purchase Weight</string>
+    <string name="purchase_height">Purchase Height</string>
+    <string name="sale_weight">Sale Weight</string>
+    <string name="sale_height">Sale Height</string>
 </resources>
 
